export interface CheckLimitDto {
  id: number;
  description?: string;
}