export interface InstrumentType {
  id: number;        // bigint
  name: string;      // varchar(30), univoco
}
